--- a/index.html
+++ b/index.html
@@ -11,24 +11,43 @@
         <div class="form-container">
             <h2>Registro</h2>
             <form id="register-form">
-                <!-- Campos de registro -->
-                <!-- Agrega los campos de registro según tus necesidades -->
-                <button type="submit">Registrarse</button>
+                <div class="form-group">
+                    <label for="register-firstname">Nombre</label>
+                    <input type="text" id="register-firstname" name="register-firstname" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-lastname">Apellido</label>
+                    <input type="text" id="register-lastname" name="register-lastname" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-email">Correo Electrónico</label>
+                    <input type="email" id="register-email" name="register-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-id">C.I.</label>
+                    <input type="text" id="register-id" name="register-id" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-phone">Teléfono</label>
+                    <input type="text" id="register-phone" name="register-phone" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-password">Contraseña</label>
+                    <input type="password" id="register-password" name="register-password" required>
+                </div>
+                <button type="submit">Crear Cuenta</button>
             </form>
         </div>
         <div class="form-container">
             <h2>Iniciar Sesión</h2>
             <form id="login-form">
-                <!-- Campos de inicio de sesión -->
                 <div class="form-group">
-                    <label for="login-username">Nombre de Usuario</label>
-                    <input type="text" id="login-username" name="login-username" required>
+                    <label for="login-email">Correo Electrónico</label>
+                    <input type="email" id="login-email" name="login-email" required>
                 </div>
-                <div class="form-group">
+                <div class="form-group",class="forgot-password">
                     <label for="login-password">Contraseña</label>
                     <input type="password" id="login-password" name="login-password" required>
-                </div>
-                <div class="forgot-password">
                     <a href="#">¿Olvidaste tu contraseña?</a>
                 </div>
                 <button type="submit">Iniciar Sesión</button>
