Correcciones en la interfaz

--- a/cuenta.html
+++ b/cuenta.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operaciones Bancarias</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="styles.css">
     <style>
         .form-container h2 {
             text-align: left; /* Alinea el texto a la izquierda */
@@ -112,7 +112,7 @@
         </div>
 
         <div class="image-container">
-            <img src="{{ url_for('static', filename='img/banco.webp') }}" alt="Imagen del banco">
+            <img src="img/banco.webp" alt="Imagen del banco">
         </div>
     </div>
 
