--- a/index.html
+++ b/index.html
@@ -79,101 +79,7 @@
         </div>
         <div id="result"></div>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const loginContainer = document.getElementById("login-container");
-            const registerContainer = document.getElementById("register-container");
-            const createAccountBtn = document.getElementById("create-account-btn");
-            const cancelRegisterBtn = document.getElementById("cancel-register-btn");
-            const registerAccountBtn = document.getElementById("register-submit-btn");
-
-            createAccountBtn.addEventListener("click", function () {
-                loginContainer.style.display = "none";
-                registerContainer.style.display = "block";
-            });
-
-            registerAccountBtn.addEventListener("click", function () {
-                loginContainer.style.display = "flex";
-                registerContainer.style.display = "none";
-            });
-
-            cancelRegisterBtn.addEventListener("click", function () {
-                loginContainer.style.display = "flex";
-                registerContainer.style.display = "none";
-            });
-        });
-
-        async function registrarUsuario() {
-            const nombre = document.getElementById('register-firstname').value;
-            const apellido = document.getElementById('register-lastname').value;
-            const correo = document.getElementById('register-email').value;
-            const cedula = document.getElementById('register-id').value;
-            const celular = document.getElementById('register-phone').value;
-            const contraseña = document.getElementById('register-password').value;
-  
-            try {
-                const response = await fetch('http://localhost:8000/usuarios', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        "nombre": nombre,
-                        "apellido": apellido,
-                        "correo": correo,
-                        "cedula": cedula,
-                        "celular": celular,
-                        "contraseña": contraseña
-                    }),
-                });
-
-                if (response.ok) {
-                    const data = await response.json();
-                    document.getElementById("resultado").innerText = JSON.stringify(data, null, 2);
-                } else {
-                    const errorData = await response.json();
-                    throw new Error(errorData.detail);
-                }
-            } catch (error) {
-                console.error('Error al realizar la solicitud:', error.message);
-                document.getElementById("resultado").innerText = `Error: ${error.message}`;
-            }
-        }
-
-
-        async function login() {
-            const correo = document.getElementById('login-email').value;
-            const contraseña = document.getElementById('login-password').value;
-
-            try {
-                const response = await fetch('http://127.0.0.1:8000/usuarios/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        "nombre": "",
-                        "apellido": "",
-                        "correo": correo,
-                        "cedula": "",
-                        "celular": "",
-                        "contraseña": contraseña
-                    }),
-                });
-
-                if (response.ok) {
-                    // Redirigir a la página cuenta.html
-                    window.location.href = 'cuenta.html';
-                } else {
-                    const result = await response.json();
-                    document.getElementById('result').innerText = JSON.stringify(result, null, 2);
-                }
-            } catch (error) {
-                console.error('Error al realizar la solicitud:', error.message);
-                document.getElementById('result').innerText = `Error: ${error.message}`;
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
